# pure-python-etl

./: README.md  pyproject.toml  raw_users.csv  requirements.txt
etl_pipeline/: cli.py  data_generator.py  database.py  extractor.py  transformer.py
